[package]
name = "rust-lpc1768-blink"
version = "0.1.0"
authors = ["Paul Osborne <osbpau@gmail.com>"]

[dependencies.zinc]
git = "https://github.com/mcoffin/zinc.git"
branch = "new-build"
features = ["lpc17xx"]

[dependencies.core]
git = "https://github.com/bharrisau/rust-libcore"

[[bin]]
name = "blink"
path = "blink.rs"
